<resources>
    <string name="app_name">poke-pedia</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_name_str_signup">User Name</string>
    <string name="password_str_signup">Password</string>
    <string name="email_str_signup">Email</string>
    <string name="register_str_signup">Register</string>
    <string name="already_have_an_account_str_signup">Already have an account</string>
    <string name="user_name_str_signin">User Name</string>
    <string name="password_str_signin">Password</string>
    <string name="sign_in_str_signin">Sign in</string>
    <string name="create_an_account_str_signin">Create an account</string>
    <string name="textview1_stats">TextView</string>
    <string name="textview2_stats">Stats</string>
    <string name="textview3_stats">TextView</string>
    <string name="textview4_stats">TextView</string>
    <string name="textview5_stats">TextView</string>
    <string name="textview6_stats">TextView</string>
    <string name="textview7_stats">TextView</string>
    <string name="textview8_stats">TextView</string>
    <string name="download_str_main">Download</string>
    <string name="textview_str_statrow">TextView</string>
    <string name="forgot_password_str"><u>Forgot password?</u></string>
    <string name="new_password_str">New password</string>
    <string name="change_password_str">Change password</string>
</resources>