<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/username_edittxt_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_str_signup"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/password_edittxt_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_str_signup"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/username_edittxt_signup"/>

    <EditText
        android:id="@+id/email_edittxt_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_str_signup"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password_edittxt_signup"/>

    <Button
        android:id="@+id/register_button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_str_signup"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/email_edittxt_signup"/>

    <Button
        android:id="@+id/signin_button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_str_signup"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/register_button_signup"/>

</RelativeLayout>